# monitor

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  sdkconfig.old
main/: CMakeLists.txt  display.cpp  display.h  idf_component.yml  main.c  resources.c  resources.h
main/img/: burner32.xbm  car32.xbm  celsius.xbm  door32.xbm  flood32.xbm  font100.xbm  font100.xcf  font28.xbm  font60.xbm  heater32.xbm  mm.xbm  mqtt.xbm  ntp.xbm  percent.xbm  solar32.xbm  wifi.xbm
